--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["maturin>=1.3.2"]
 build-backend = "maturin"
 
 [project]
-name = "polars_ds"
+name = "polars_ds_elastic_net"
 requires-python = ">=3.9"
-version = "0.6.3"
+version = "0.0.1"
 
 license = { file = "LICENSE.txt" }
 classifiers = [
@@ -32,7 +32,7 @@ all = ["great-tables>=0.9", "graphviz>=0.20", "numpy>=1.16", "altair >= 5.4.0", 
 strip = true
 python-source = "python"
 features = ["pyo3/extension-module"]
-module-name = "polars_ds._polars_ds"
+module-name = "polars_ds._polars_ds_elastic_net"
 
 [tool.ruff]
 line-length = 100
