--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ all = ["great-tables>=0.9", "graphviz>=0.20", "numpy>=1.16", "altair >= 5.4.0", 
 strip = true
 python-source = "python"
 features = ["pyo3/extension-module"]
-module-name = "polars_ds._polars_ds_elastic_net"
+module-name = "polars_ds_elastic_net._polars_ds_elastic_net"
 
 [tool.ruff]
 line-length = 100
