--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package: [polars_ds]
+        package: [polars_ds_elastic_net]
 
     steps:
       - uses: actions/checkout@v4
@@ -50,53 +50,15 @@ jobs:
             --manifest-path Cargo.toml
             --out dist
 
-      - name: Test sdist
-        run: |
-          pip install --force-reinstall --verbose dist/*.tar.gz
-          pip install typing_extensions
-          pip install -r requirements.txt
-          python -c 'import polars_ds as pds'
-          python -c 'from polars_ds import linear_models'
-          python -c 'from polars_ds.ts_features import *'
-          python -c 'from polars_ds.spatial import *'
-          python -c 'from polars_ds.sample_and_split import *'
-
-      - name: Upload sdist
-        uses: actions/upload-artifact@v4
-        with:
-          name: sdist-${{ matrix.package }}
-          path: dist/*.tar.gz
-
-      - name: Test Correctness
-        run: | 
-          python -m pip install --upgrade pip
-          pip install pytest
-          pip install .
-          pip install -r tests/requirements-test.txt
-          pytest tests/test_*
-
-      - name: Test Notebooks
-        run: | 
-          python -m pip install --upgrade pip
-          pip install jupyter ipython ipykernel nbconvert
-          pip install -r tests/requirements-test.txt
-          jupyter execute examples/basics.ipynb
-          jupyter execute examples/diagnosis.ipynb
-          jupyter execute examples/sample_and_split.ipynb
-
-
   build-wheels:
     runs-on: ${{ matrix.os }}
     needs: [create-sdist]
     strategy:
       fail-fast: false
       matrix:
-        package: [polars_ds]
-        os: [ubuntu-latest, macos-13, windows-latest]
-        architecture: [x86-64, aarch64]
-        exclude:
-          - os: windows-latest
-            architecture: aarch64
+        package: [polars_ds_elastic_net]
+        os: [ubuntu-latest]
+        architecture: [aarch64]
 
     steps:
       - uses: actions/checkout@v4
@@ -156,34 +118,10 @@ jobs:
         run: |
           pip install --force-reinstall --verbose dist/*.whl
           pip install typing_extensions
-          python -c 'import polars_ds'
+          python -c 'import polars_ds_elastic_net'
 
       - name: Upload wheel
         uses: actions/upload-artifact@v4
         with:
           name: wheel-${{ matrix.package }}-${{ matrix.os }}-${{ matrix.architecture }}
           path: dist/*.whl
-
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [build-wheels, create-sdist]
-    permissions:
-        id-token: write
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          pattern: wheel-*
-          merge-multiple: true
-
-      - uses: actions/download-artifact@v4
-        with:
-          pattern: sdist-*
-          merge-multiple: true
-          
-      - name: Publish to PyPI
-        uses: PyO3/maturin-action@v1
-        with:
-          command: upload
-          args: --non-interactive --skip-existing *
